--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -1,16 +1,171 @@
 /*-----------------------Type-------------------------------*/
-html {
-    font-family: sans-serif;
-    background-color: white;
+*,::before ,::after {
+    box-sizing: border-box;
+    margin: 0%;
+    padding: 0%;
 }
 
 body {
-    display: flex;
-    text-align: center;
-    margin: 0 auto;
-    padding: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-footer{
-    
+h1{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: lighter;
+  letter-spacing: 15px;
+  text-align: center;
+  padding: 2%;
+  font-size: 40px;  
+}
+
+form button{
+    border: none;
+    outline: none;
+    border: 1px solid coral;
+    border-radius: 5px;
+    display: block;
+    margin: 20px auto;
+    padding: 30px 40px;
+    cursor: pointer;
+    font-size: 25px;
+    transition: background-color 0.2s ease-in-out; /*transition entre deux états d'un élément*//
+}
+
+form button:hover{
+    background-color: lightblue;
+}
+
+/*-----------------------Class-------------------------------*/
+
+.container-global{
+    width: 70%;
+    max-width: 800px;
+    margin: 0 auto;
+    height: auto;
+}
+
+.question-block{
+    padding: 15px 15px 15px;
+    margin: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rebeccapurple;
+}
+
+.question-block h4 {
+    padding: 10px 0;
+    font-size: 22px;
+}
+
+.question-block label{
+    font-size: 20px;
+}
+
+.question-block input[type='radio']{
+    transform: scale(1.8);
+    margin: 10px;
+}
+
+.resultat{
+    padding: 25px;
+    margin: 10px 0px 70px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px lightcoral;
+}
+
+.resultat h2{
+    text-align: center;
+}
+
+.icon-help {
+    display: flex;
+}
+
+.icon-help img{
+    flex: 1;
+    height: auto; 
+    width: auto; 
+    max-width: 40px; 
+    max-height: 40px;  
+}
+
+.icon-help h3 {
+    flex: 1;
+    text-align: start;
+    width: auto;
+    height: auto;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+
+.echec{
+    animation: echec 0.3 ease-in-out;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+}
+
+.popup{
+    padding: 25px;
+    margin: 10px 0px 70px;
+    border-radius: 5px;
+    border-color: gray;
+    border-width: 1px;
+}
+
+.popup div{
+    flex: 1;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.progress-bar{
+    height: 20px;
+    width: 100%;
+}
+
+/*-----------------------ID-------------------------------*/
+
+#align-horizontal{
+    display: flex;
+}
+
+#popup-note{
+    text-align: center;
+    position: relative;
+}
+
+#popup-aide{
+    text-align: center;
+}
+
+#popup-close{
+    height: auto; 
+    width: auto; 
+    max-width: 20px; 
+    max-height: 20px;  
+}
+
+#dialog-note{
+    position:absolute;
+    top: 25%;
+    left: 48%;
+    margin-top: -50px;
+    margin-left: -50px;
+}
+/*-----------------------Animation-------------------------------*/
+
+@keyframes echec {
+    0%{
+        transform: translateX(0px);
+    }
+    33%{
+        transform: translateX(5px);
+    }
+    66%{
+        transform: translateX(-5px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
 }
